--- a/package.json
+++ b/package.json
@@ -4,12 +4,15 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "node server",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "rohit sharma",
   "license": "ISC",
   "dependencies": {
+    "@reduxjs/toolkit": "^2.1.0",
     "express": "^4.18.2",
+    "react-redux": "^9.1.0",
     "socket.io": "^4.7.4"
   }
 }
